--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "bedrock-protocol": "^3.22.0",
-    "deg2rad": "^1.0.0"
+    "deg2rad": "^1.0.0",
+    "uuid": "^9.0.0"
   }
 }
