--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "dependencies": {
     "bedrock-protocol": "^3.22.0",
+    "colors": "^1.4.0",
     "deg2rad": "^1.0.0",
+    "gkm": "^0.2.0",
+    "ip": "^1.1.8",
+    "js_mt_rand": "^2.1.0",
     "uuid": "^9.0.0"
   }
 }
