Added packs features

--- a/software/package.json
+++ b/software/package.json
@@ -5,9 +5,11 @@
     "bedrock-protocol": "^3.22.0",
     "colors": "^1.4.0",
     "deg2rad": "^1.0.0",
+    "filereader": "^0.10.3",
     "gkm": "^0.2.0",
     "ip": "^1.1.8",
     "js_mt_rand": "^2.1.0",
+    "jszip": "^3.10.1",
     "libquery": "^1.0.2",
     "prismarine-chunk": "^1.33.0",
     "prismarine-nbt": "^2.2.1",
